--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         android:theme="@style/Theme.MWDiary">
         <activity
             android:name=".SelectedBooks"
+            android:exported="false"
             android:parentActivityName=".MainActivity"></activity>
         <activity
             android:name=".AboutUsActivity"
